# lace

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: release.yml  rust.yml
scratch/: test.asm
src/: air.rs  command.rs  debugger.rs  env.rs  error.rs  features.rs  lib.rs  main.rs  mc.rs  ops.rs  output.rs  parse.rs  parser.rs  runtime.rs  span.rs  state.rs  symbol.rs  term.rs  token.rs
src/debugger/: asm.rs  breakpoint.rs  command.rs  error.rs  eval.rs  help.txt  mod.rs  parse.rs  print.rs  source.rs
src/debugger/command/: error.rs  mod.rs  parse.rs  reader.rs  source.rs
src/debugger/command/parse/: integer.rs  label.rs  mod.rs  naive.rs  name.rs
src/debugger/command/reader/: argument.rs  mod.rs  stdin.rs  terminal.rs
src/lexer/: cursor.rs  mod.rs
tests/: debugger_tests.rs  integration_tests.rs
tests/commands/: check_every_command  hello_world
tests/expected/: check_every_command  hello_world
tests/files/: fibonacci.asm  hw.asm  stack.asm
