[package]
name = "lace"
description = "A complete compiler and interpreter toolchain for the LC3 assembly language."
version = "0.1.0"
authors = [
    "Artemis Rosman"
]
edition = "2021"

[dependencies]
glob = "0.3.1"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
regex = "1.10.6"
lazy_static = "1.5.0"
miette = { version = "7.2.0", features = ["fancy"] }

[dev-dependencies]
assert_cmd = "2.0.14"

[[bin]]
name = "lace"
path = "src/main.rs"
