[package]
name = "lace"
description = "A complete assembler toolchain for the LC3 assembly language."
version = "0.1.0"
authors = [
    "Artemis Rosman"
]
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
lazy_static = "1.5.0"
miette = { version = "7.2.0", features = ["fancy"] }
fxhash = "0.2.1"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.2"

[[bin]]
name = "lace"
path = "src/main.rs"
